# wadsworth

./: .clang-format  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .style.yapf  CMakeLists.txt  CPPLINT.cfg  README.md  pyproject.toml
.github/workflows/: ci.yml
cfg/: calibration.cfg
drivers/linux_serial/: linux_serial.cpp  linux_serial.h
drivers/sts3215/: sts3215.cpp  sts3215.h
include/: arm_calibration.h  arm_kinematics.h  serial_interface.h
python/: __init__.py  env.py  test_env.py
sim/: scene.xml
src/: arm_calibration.cpp  arm_kinematics.cpp  main.cpp  mujoco_loader.cpp
